--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener</title>
+    <!-- <link rel="stylesheet" href="../public/stylesheets/form.css"> -->
     <style>
         body {
-            /* Background gradient animation */
+          /* Background gradient animation  */
             background: linear-gradient(135deg, #009ec3, #00b7ea);
             background-size: 400% 400%;
             animation: gradientBackground 15s ease infinite;
