--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
     <style>
         body {
           /* Background gradient animation  */
-            background: linear-gradient(135deg, #009ec3, #00b7ea);
+            background: linear-gradient(135deg, hwb(191 0% 24%), #00b7ea);
             background-size: 400% 400%;
             animation: gradientBackground 15s ease infinite;
             display: flex;
@@ -27,7 +27,7 @@
         }
 
         .wrapper {
-            width: 50vw;
+            width: 500px;
             padding: 20px;
             border-radius: 15px;
             background: rgba(255, 255, 255, 0.9);
