--- a/views/form.ejs
+++ b/views/form.ejs
@@ -77,6 +77,11 @@
         .result a:hover {
             color: #00b7ea;
         }
+        .signBtn{
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"></script>
 </head>
